adds more screens, click navigation

--- a/html-templates/index.html
+++ b/html-templates/index.html
@@ -28,8 +28,8 @@
 		
 		<div class="screen screen-home shown">
 			<div class="controls">
-				<button class="navigate-left"><span class="label">Previous</span></button>
-				<button class="navigate-right"><span class="label">Next</span></button>
+				<button class="navigate-left"><span class="label btn">Previous</span></button>
+				<button class="navigate-right"><span class="label btn">Next</span></button>
 				<button class="navigate-up"><span class="label">Order&hellip;</span></button>
 				<button class="navigate-down"><span class="label">Lock&hellip;</span></button>
 			</div>
@@ -37,13 +37,31 @@
 		
 		<div class="screen screen-order">
 			<div class="controls">
-				<button class="navigate-left"><span class="label">Chronological</span></button>
-				<button class="navigate-right"><span class="label">A-Z</span></button>
-				<button class="navigate-up"><span class="label">Random order</span></button>
-				<button class="navigate-down"><span class="label">Back (Resume)</span></button>
+				<button class="navigate-left"><span class="label btn">Chronological</span></button>
+				<button class="navigate-right"><span class="label btn">A-Z</span></button>
+				<button class="navigate-up"><span class="label btn">Random order</span></button>
+				<button class="navigate-down"><span class="label btn">Back (Resume)</span></button>
 			</div>
 		</div>
 		
+		<div class="screen screen-lock">
+			<div class="controls">
+				<button class="navigate-left"><span class="label btn">This month</span></button>
+				<button class="navigate-right"><span class="label btn">This folder</span></button>
+				<button class="navigate-up"><span class="label btn">Unlocked (default)</span></button>
+				<button class="navigate-down"><span class="label">Day, Year, Tag&hellip;</span></button>
+			</div>
+		</div>
+
+		<div class="screen screen-lock2">
+			<div class="controls">
+				<button class="navigate-left"><span class="label btn">This day</span></button>
+				<button class="navigate-right"><span class="label btn">This year</span></button>
+				<button class="navigate-up"><span class="label">Back&hellip;</span></button>
+				<button class="navigate-down"><span class="label">Tag&hellip;</span></button>
+			</div>
+		</div>
+
 		<div class="slides">
 			<div class="slide slide1 active"><span class="label">Slide 1</span></div>
 			<div class="slide slide2"><span class="label">Slide 2</span></div>
