switches icons to use font-awesome

--- a/html-templates/index.html
+++ b/html-templates/index.html
@@ -13,52 +13,52 @@
 		<div class="remote">
 			<div class="remote-body">
 				<div class="controls">
-					<button class="navigate-back" title="Backspace">&larr;</button>
-					<button class="navigate-left" title="Left arrow">&lt;</button>
-					<button class="navigate-right" title="Right arrow">&gt;</button>
-					<button class="navigate-up" title="Up arrow">^</button>
-					<button class="navigate-down" title="Down arrow">v</button>
+					<button class="navigate-back" title="Backspace"><i class="fa fa-arrow-left"></i></button>
+					<button class="navigate-left" title="Left arrow"><i class="fa fa-chevron-left"></i></button>
+					<button class="navigate-right" title="Right arrow"><i class="fa fa-chevron-right"></i></button>
+					<button class="navigate-up" title="Up arrow"><i class="fa fa-chevron-up"></i></button>
+					<button class="navigate-down" title="Down arrow"><i class="fa fa-chevron-down"></i></button>
 					<button class="ok" title="Enter">OK</button>
-					<button class="play-pause" title="Space bar">&gt;||</button>
-					<button class="rewind" title="z">&lt;&lt;</button>
-					<button class="forward" title="x">&gt;&gt;</button>
+					<button class="play-pause" title="Space bar"><i class="fa fa-play"></i><i class="fa fa-pause"></i></button>
+					<button class="rewind" title="z"><i class="fa fa-backward"></i></button>
+					<button class="forward" title="x"><i class="fa fa-forward"></i></button>
 				</div>
 			</div>
 		</div>
 		
 		<div class="screen screen-home shown">
 			<div class="controls">
-				<button class="navigate-left btn"><span class="label">Previous</span></button>
-				<button class="navigate-right btn"><span class="label">Next</span></button>
-				<button class="navigate-up"><span class="label">Order&hellip;</span></button>
-				<button class="navigate-down"><span class="label">Lock&hellip;</span></button>
+				<button class="navigate-left btn"><i class="icon fa fa-chevron-left"></i><span class="label">Previous</span></button>
+				<button class="navigate-right btn"><span class="label">Next</span><i class="icon fa fa-chevron-right"></i></button>
+				<button class="navigate-up"><i class="icon fa fa-chevron-up"></i><span class="label">Order&hellip;</span></button>
+				<button class="navigate-down"><span class="label">Lock&hellip;</span><i class="icon fa fa-chevron-down"></i></button>
 			</div>
 		</div>
 		
 		<div class="screen screen-order">
 			<div class="controls">
-				<button class="navigate-left btn"><span class="label">Chronological</span></button>
-				<button class="navigate-right btn"><span class="label">A-Z</span></button>
-				<button class="navigate-up btn"><span class="label">Random order</span></button>
-				<button class="navigate-down btn"><span class="label">Back (Resume)</span></button>
+				<button class="navigate-left btn"><i class="icon fa fa-chevron-left"></i><span class="label">Chronological</span></button>
+				<button class="navigate-right btn"><span class="label">A-Z</span><i class="icon fa fa-chevron-right"></i></button>
+				<button class="navigate-up btn"><i class="icon fa fa-chevron-up"></i><span class="label">Random order</span></button>
+				<button class="navigate-down btn"><span class="label">Back (Resume)</span><i class="icon fa fa-chevron-down"></i></button>
 			</div>
 		</div>
 		
 		<div class="screen screen-lock">
 			<div class="controls">
-				<button class="navigate-left btn"><span class="label">This month</span></button>
-				<button class="navigate-right btn"><span class="label">This folder</span></button>
-				<button class="navigate-up btn"><span class="label">Unlocked (default)</span></button>
-				<button class="navigate-down"><span class="label">Day, Year, Tag&hellip;</span></button>
+				<button class="navigate-left btn"><i class="icon fa fa-chevron-left"></i><span class="label">This month</span></button>
+				<button class="navigate-right btn"><span class="label">This folder</span><i class="icon fa fa-chevron-right"></i></button>
+				<button class="navigate-up btn"><i class="icon fa fa-chevron-up"></i><span class="label">Unlocked (default)</span></button>
+				<button class="navigate-down"><span class="label">Day, Year, Tag&hellip;</span><i class="icon fa fa-chevron-down"></i></button>
 			</div>
 		</div>
 
 		<div class="screen screen-lock2">
 			<div class="controls">
-				<button class="navigate-left btn"><span class="label">This day</span></button>
-				<button class="navigate-right btn"><span class="label">This year</span></button>
-				<button class="navigate-up"><span class="label">Back&hellip;</span></button>
-				<button class="navigate-down"><span class="label">Tag&hellip;</span></button>
+				<button class="navigate-left btn"><i class="icon fa fa-chevron-left"></i><span class="label">This day</span></button>
+				<button class="navigate-right btn"><span class="label">This year</span><i class="icon fa fa-chevron-right"></i></button>
+				<button class="navigate-up"><i class="icon fa fa-chevron-up"></i><span class="label">Back&hellip;</span></button>
+				<button class="navigate-down"><span class="label">Tag&hellip;</span><i class="icon fa fa-chevron-down"></i></button>
 			</div>
 		</div>
 
