echo global variable for keypressed

--- a/html-templates/index.html
+++ b/html-templates/index.html
@@ -68,6 +68,7 @@
 		</div>
 		
 		<div class="messages">
+			<div class="message event"></div>
 			<div class="message order-current">Current order</div>
 			<div class="message lock-current">Current lock</div>
 			<div class="message order-new">New order</div>
