adds animate.css, progress on javascript

--- a/html-templates/index.html
+++ b/html-templates/index.html
@@ -27,38 +27,46 @@
 		</div>
 		
 		<div class="screen screen-home shown">
+			<div class="screen-title">screen-home</div>
 			<div class="controls">
 				<button class="navigate-left btn"><i class="icon fa fa-chevron-left"></i><span class="label">Previous</span></button>
 				<button class="navigate-right btn"><span class="label">Next</span><i class="icon fa fa-chevron-right"></i></button>
 				<button class="navigate-up"><i class="icon fa fa-chevron-up"></i><span class="label">Order&hellip;</span></button>
 				<button class="navigate-down"><span class="label">Lock&hellip;</span><i class="icon fa fa-chevron-down"></i></button>
+				<button class="navigate-back btn"><i class="icon fa fa-backward"></i><span class="label">Exit</span></button>
 			</div>
 		</div>
 		
 		<div class="screen screen-order">
+			<div class="screen-title">screen-order</div>
 			<div class="controls">
 				<button class="navigate-left btn"><i class="icon fa fa-chevron-left"></i><span class="label">Chronological</span></button>
 				<button class="navigate-right btn"><span class="label">A-Z</span><i class="icon fa fa-chevron-right"></i></button>
 				<button class="navigate-up btn"><i class="icon fa fa-chevron-up"></i><span class="label">Random order</span></button>
 				<button class="navigate-down btn"><span class="label">Back (Resume)</span><i class="icon fa fa-chevron-down"></i></button>
+				<button class="navigate-back btn"><i class="icon fa fa-backward"></i><span class="label">Cancel</span></button>
 			</div>
 		</div>
 		
 		<div class="screen screen-lock">
+			<div class="screen-title">screen-lock</div>
 			<div class="controls">
 				<button class="navigate-left btn"><i class="icon fa fa-chevron-left"></i><span class="label">This month</span></button>
 				<button class="navigate-right btn"><span class="label">This folder</span><i class="icon fa fa-chevron-right"></i></button>
 				<button class="navigate-up btn"><i class="icon fa fa-chevron-up"></i><span class="label">Unlocked (default)</span></button>
 				<button class="navigate-down"><span class="label">Day, Year, Tag&hellip;</span><i class="icon fa fa-chevron-down"></i></button>
+				<button class="navigate-back btn"><i class="icon fa fa-backward"></i><span class="label">Cancel</span></button>
 			</div>
 		</div>
 
 		<div class="screen screen-lock2">
+			<div class="screen-title">screen-lock2</div>
 			<div class="controls">
 				<button class="navigate-left btn"><i class="icon fa fa-chevron-left"></i><span class="label">This day</span></button>
 				<button class="navigate-right btn"><span class="label">This year</span><i class="icon fa fa-chevron-right"></i></button>
 				<button class="navigate-up"><i class="icon fa fa-chevron-up"></i><span class="label">Back&hellip;</span></button>
 				<button class="navigate-down"><span class="label">Tag&hellip;</span><i class="icon fa fa-chevron-down"></i></button>
+				<button class="navigate-back btn"><i class="icon fa fa-backward"></i><span class="label">Cancel</span></button>
 			</div>
 		</div>
 
