adds fontawesome assets; javascript progress

--- a/html-templates/index.html
+++ b/html-templates/index.html
@@ -26,7 +26,7 @@
 			</div>
 		</div>
 		
-		<div class="screen screen-home shown">
+		<div class="screen screen-home">
 			<div class="screen-title">screen-home</div>
 			<div class="controls">
 				<button class="navigate-left btn"><i class="icon fa fa-chevron-left"></i><span class="label">Previous</span></button>
@@ -79,8 +79,8 @@
 			<div class="message event"></div>
 			<div class="message order-current">Current order</div>
 			<div class="message lock-current">Current lock</div>
-			<div class="message order-new">New order</div>
-			<div class="message lock-new">New lock</div>
+			<div class="message order-new"></div>
+			<div class="message lock-new"></div>
 		</div>
 		
 
