most navigation and messaging done now

--- a/html-templates/index.html
+++ b/html-templates/index.html
@@ -43,7 +43,7 @@
 				<button class="navigate-left btn"><i class="icon fa fa-chevron-left"></i><span class="label">Chronological</span></button>
 				<button class="navigate-right btn"><span class="label">A-Z</span><i class="icon fa fa-chevron-right"></i></button>
 				<button class="navigate-up btn"><i class="icon fa fa-chevron-up"></i><span class="label">Random order</span></button>
-				<button class="navigate-down btn"><span class="label">Back (Resume)</span><i class="icon fa fa-chevron-down"></i></button>
+				<button class="navigate-down btn"><span class="label">Cancel</span><i class="icon fa fa-chevron-down"></i></button>
 				<button class="navigate-back btn"><i class="icon fa fa-backward"></i><span class="label">Cancel</span></button>
 			</div>
 		</div>
@@ -71,8 +71,20 @@
 		</div>
 
 		<div class="slides">
-			<div class="slide slide1 active"><span class="label">Slide 1</span></div>
-			<div class="slide slide2"><span class="label">Slide 2</span></div>
+			<div class="slide slide1 active">
+				<div class="caption">
+					<h2>Photo title</h2>
+					<p>Photo description. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras justo odio, dapibus ac facilisis in, egestas eget quam.</p>
+				</div>
+				<span class="label">Slide 1</span>
+			</div>
+			<div class="slide slide2">
+				<div class="caption">
+					<h2>Photo title</h2>
+					<p>Photo description. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras justo odio, dapibus ac facilisis in, egestas eget quam.</p>
+				</div>
+				<span class="label">Slide 2</span>
+			</div>
 		</div>
 		
 		<div class="messages">
@@ -81,6 +93,8 @@
 			<div class="message lock-current">Current lock</div>
 			<div class="message order-new"></div>
 			<div class="message lock-new"></div>
+			<div class="message pause-icon"><i class="fa fa-pause"></i></div>
+			<div class="message play-icon"><i class="fa fa-play"></i></div>
 		</div>
 		
 
