tidied javascript, got messages working right

--- a/html-templates/index.html
+++ b/html-templates/index.html
@@ -26,75 +26,78 @@
 			</div>
 		</div>
 		
-		<div class="screen screen-home">
-			<div class="screen-title">screen-home</div>
-			<div class="controls">
-				<button class="navigate-left btn"><i class="icon fa fa-chevron-left"></i><span class="label">Previous</span></button>
-				<button class="navigate-right btn"><span class="label">Next</span><i class="icon fa fa-chevron-right"></i></button>
-				<button class="navigate-up"><i class="icon fa fa-chevron-up"></i><span class="label">Order&hellip;</span></button>
-				<button class="navigate-down"><span class="label">Lock&hellip;</span><i class="icon fa fa-chevron-down"></i></button>
-				<button class="navigate-back btn"><i class="icon fa fa-backward"></i><span class="label">Exit</span></button>
-			</div>
-		</div>
-		
-		<div class="screen screen-order">
-			<div class="screen-title">screen-order</div>
-			<div class="controls">
-				<button class="navigate-left btn"><i class="icon fa fa-chevron-left"></i><span class="label">Chronological</span></button>
-				<button class="navigate-right btn"><span class="label">A-Z</span><i class="icon fa fa-chevron-right"></i></button>
-				<button class="navigate-up btn"><i class="icon fa fa-chevron-up"></i><span class="label">Random order</span></button>
-				<button class="navigate-down btn"><span class="label">Cancel</span><i class="icon fa fa-chevron-down"></i></button>
-				<button class="navigate-back btn"><i class="icon fa fa-backward"></i><span class="label">Cancel</span></button>
-			</div>
-		</div>
-		
-		<div class="screen screen-lock">
-			<div class="screen-title">screen-lock</div>
-			<div class="controls">
-				<button class="navigate-left btn"><i class="icon fa fa-chevron-left"></i><span class="label">This month</span></button>
-				<button class="navigate-right btn"><span class="label">This folder</span><i class="icon fa fa-chevron-right"></i></button>
-				<button class="navigate-up btn"><i class="icon fa fa-chevron-up"></i><span class="label">Unlocked (default)</span></button>
-				<button class="navigate-down"><span class="label">Day, Year, Tag&hellip;</span><i class="icon fa fa-chevron-down"></i></button>
-				<button class="navigate-back btn"><i class="icon fa fa-backward"></i><span class="label">Cancel</span></button>
-			</div>
-		</div>
-
-		<div class="screen screen-lock2">
-			<div class="screen-title">screen-lock2</div>
-			<div class="controls">
-				<button class="navigate-left btn"><i class="icon fa fa-chevron-left"></i><span class="label">This day</span></button>
-				<button class="navigate-right btn"><span class="label">This year</span><i class="icon fa fa-chevron-right"></i></button>
-				<button class="navigate-up"><i class="icon fa fa-chevron-up"></i><span class="label">Back&hellip;</span></button>
-				<button class="navigate-down"><span class="label">Tag&hellip;</span><i class="icon fa fa-chevron-down"></i></button>
-				<button class="navigate-back btn"><i class="icon fa fa-backward"></i><span class="label">Cancel</span></button>
-			</div>
-		</div>
-
-		<div class="slides">
-			<div class="slide slide1 active">
-				<div class="caption">
-					<h2>Photo title</h2>
-					<p>Photo description. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras justo odio, dapibus ac facilisis in, egestas eget quam.</p>
+		<div class="tv">
+			
+			<div class="screen screen-home">
+				<div class="screen-title">screen-home</div>
+				<div class="controls">
+					<button class="navigate-left btn"><i class="icon fa fa-chevron-left"></i><span class="label">Previous</span></button>
+					<button class="navigate-right btn"><span class="label">Next</span><i class="icon fa fa-chevron-right"></i></button>
+					<button class="navigate-up"><i class="icon fa fa-chevron-up"></i><span class="label">Order&hellip;</span></button>
+					<button class="navigate-down"><span class="label">Lock&hellip;</span><i class="icon fa fa-chevron-down"></i></button>
+					<button class="navigate-back btn"><i class="icon fa fa-backward"></i><span class="label">Exit</span></button>
 				</div>
-				<span class="label">Slide 1</span>
 			</div>
-			<div class="slide slide2">
-				<div class="caption">
-					<h2>Photo title</h2>
-					<p>Photo description. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras justo odio, dapibus ac facilisis in, egestas eget quam.</p>
+			
+			<div class="screen screen-order">
+				<div class="screen-title">screen-order</div>
+				<div class="controls">
+					<button class="navigate-left btn"><i class="icon fa fa-chevron-left"></i><span class="label">Chronological</span></button>
+					<button class="navigate-right btn"><span class="label">A-Z</span><i class="icon fa fa-chevron-right"></i></button>
+					<button class="navigate-up btn"><i class="icon fa fa-chevron-up"></i><span class="label">Random order</span></button>
+					<button class="navigate-down btn"><span class="label">Cancel</span><i class="icon fa fa-chevron-down"></i></button>
+					<button class="navigate-back btn"><i class="icon fa fa-backward"></i><span class="label">Cancel</span></button>
 				</div>
-				<span class="label">Slide 2</span>
 			</div>
-		</div>
-		
-		<div class="messages">
-			<div class="message event"></div>
-			<div class="message order-current">Current order</div>
-			<div class="message lock-current">Current lock</div>
-			<div class="message order-new"></div>
-			<div class="message lock-new"></div>
-			<div class="message pause-icon"><i class="fa fa-pause"></i></div>
-			<div class="message play-icon"><i class="fa fa-play"></i></div>
+			
+			<div class="screen screen-lock">
+				<div class="screen-title">screen-lock</div>
+				<div class="controls">
+					<button class="navigate-left btn"><i class="icon fa fa-chevron-left"></i><span class="label">This month</span></button>
+					<button class="navigate-right btn"><span class="label">This folder</span><i class="icon fa fa-chevron-right"></i></button>
+					<button class="navigate-up btn"><i class="icon fa fa-chevron-up"></i><span class="label">Unlocked (default)</span></button>
+					<button class="navigate-down"><span class="label">Day, Year, Tag&hellip;</span><i class="icon fa fa-chevron-down"></i></button>
+					<button class="navigate-back btn"><i class="icon fa fa-backward"></i><span class="label">Cancel</span></button>
+				</div>
+			</div>
+	
+			<div class="screen screen-lock2">
+				<div class="screen-title">screen-lock2</div>
+				<div class="controls">
+					<button class="navigate-left btn"><i class="icon fa fa-chevron-left"></i><span class="label">This day</span></button>
+					<button class="navigate-right btn"><span class="label">This year</span><i class="icon fa fa-chevron-right"></i></button>
+					<button class="navigate-up"><i class="icon fa fa-chevron-up"></i><span class="label">Back&hellip;</span></button>
+					<button class="navigate-down"><span class="label">Tag&hellip;</span><i class="icon fa fa-chevron-down"></i></button>
+					<button class="navigate-back btn"><i class="icon fa fa-backward"></i><span class="label">Cancel</span></button>
+				</div>
+			</div>
+	
+			<div class="slides">
+				<div class="slide slide1 active">
+					<div class="caption">
+						<h2>IMG00001</h2>
+						<div class="path">/Users/francoisjordaan/Documents/Photos/2016/2016_07_Misc/</div>
+						<p>Photo description / caption if in EXIF/IPTC data.</p>
+						<p class="tags"><strong>Tags:</strong> tag1, tag2, tag3</p>
+					</div>
+					<span class="label">Slide 1</span>
+				</div>
+				<div class="slide slide2">
+					<div class="caption"></div>
+					<span class="label">Slide 2</span>
+				</div>
+			</div>
+			
+			<div class="messages">
+				<div class="message event"></div>
+				<div class="message order-new"></div>
+				<div class="message lock-new"></div>
+				<div class="message order-current">Photos displayed in random order</div>
+				<div class="message lock-current">Unlocked: displaying all photos</div>
+				<div class="message pause-icon"><i class="fa fa-pause"></i></div>
+				<div class="message play-icon"><i class="fa fa-play"></i></div>
+			</div>
+			
 		</div>
 		
 
