slideshow code in progress, slideshow images

--- a/html-templates/index.html
+++ b/html-templates/index.html
@@ -74,6 +74,7 @@
 	
 			<div class="slides">
 				<div class="slide slide1 active">
+					<div class="image" style="background-image: url('img/DSC06329.JPG')"></div>
 					<div class="caption">
 						<h2>IMG00001</h2>
 						<div class="path">/Users/francoisjordaan/Documents/Photos/2016/2016_07_Misc/</div>
@@ -83,8 +84,20 @@
 					<span class="label">Slide 1</span>
 				</div>
 				<div class="slide slide2">
-					<div class="caption"></div>
+					<div class="image" style="background-image: url('img/DSC06330.JPG')"></div>
+					<div class="caption">
+						<h2>IMG00002</h2>
+						<div class="path">/Users/francoisjordaan/Documents/Photos/2016/2016_07_Misc/</div>
+					</div>
 					<span class="label">Slide 2</span>
+				</div>
+				<div class="slide slide3">
+					<div class="image" style="background-image: url('img/DSC06332.JPG')"></div>
+					<div class="caption">
+						<h2>IMG00003</h2>
+						<div class="path">/Users/francoisjordaan/Documents/Photos/2016/2016_07_Misc/</div>
+					</div>
+					<span class="label">Slide 3</span>
 				</div>
 			</div>
 			
