--- a/html-templates/index.html
+++ b/html-templates/index.html
@@ -73,31 +73,140 @@
 			</div>
 	
 			<div class="slides">
-				<div class="slide slide1 active">
+				<div class="slide active">
 					<div class="image" style="background-image: url('img/DSC06329.JPG')"></div>
 					<div class="caption">
-						<h2>IMG00001</h2>
+						<h2>DSC06329.JPG</h2>
 						<div class="path">/Users/francoisjordaan/Documents/Photos/2016/2016_07_Misc/</div>
 						<p>Photo description / caption if in EXIF/IPTC data.</p>
 						<p class="tags"><strong>Tags:</strong> tag1, tag2, tag3</p>
 					</div>
-					<span class="label">Slide 1</span>
 				</div>
-				<div class="slide slide2">
+				<div class="slide">
 					<div class="image" style="background-image: url('img/DSC06330.JPG')"></div>
 					<div class="caption">
-						<h2>IMG00002</h2>
+						<h2>DSC06330.JPG</h2>
 						<div class="path">/Users/francoisjordaan/Documents/Photos/2016/2016_07_Misc/</div>
 					</div>
-					<span class="label">Slide 2</span>
 				</div>
-				<div class="slide slide3">
+				<div class="slide">
 					<div class="image" style="background-image: url('img/DSC06332.JPG')"></div>
 					<div class="caption">
-						<h2>IMG00003</h2>
+						<h2>DSC06332.JPG</h2>
 						<div class="path">/Users/francoisjordaan/Documents/Photos/2016/2016_07_Misc/</div>
 					</div>
-					<span class="label">Slide 3</span>
+				</div>
+				<div class="slide">
+					<div class="image" style="background-image: url('img/DSC06333.JPG')"></div>
+					<div class="caption">
+						<h2>DSC06333.JPG</h2>
+						<div class="path">/Users/francoisjordaan/Documents/Photos/2016/2016_07_Misc/</div>
+					</div>
+				</div>
+				<div class="slide">
+					<div class="image" style="background-image: url('img/DSC06334.JPG')"></div>
+					<div class="caption">
+						<h2>DSC06334.JPG</h2>
+						<div class="path">/Users/francoisjordaan/Documents/Photos/2016/2016_07_Misc/</div>
+					</div>
+				</div>
+				<div class="slide">
+					<div class="image" style="background-image: url('img/DSC06335.JPG')"></div>
+					<div class="caption">
+						<h2>DSC06335.JPG</h2>
+						<div class="path">/Users/francoisjordaan/Documents/Photos/2016/2016_07_Misc/</div>
+					</div>
+				</div>
+				<div class="slide">
+					<div class="image" style="background-image: url('img/DSC06336.JPG')"></div>
+					<div class="caption">
+						<h2>DSC06336.JPG</h2>
+						<div class="path">/Users/francoisjordaan/Documents/Photos/2016/2016_07_Misc/</div>
+					</div>
+				</div>
+				<div class="slide">
+					<div class="image" style="background-image: url('img/DSC06337.JPG')"></div>
+					<div class="caption">
+						<h2>DSC06337.JPG</h2>
+						<div class="path">/Users/francoisjordaan/Documents/Photos/2016/2016_07_Misc/</div>
+					</div>
+				</div>
+				<div class="slide">
+					<div class="image" style="background-image: url('img/DSC06338.JPG')"></div>
+					<div class="caption">
+						<h2>DSC06338.JPG</h2>
+						<div class="path">/Users/francoisjordaan/Documents/Photos/2016/2016_07_Misc/</div>
+					</div>
+				</div>
+				<div class="slide">
+					<div class="image" style="background-image: url('img/DSC06340.JPG')"></div>
+					<div class="caption">
+						<h2>DSC06340.JPG</h2>
+						<div class="path">/Users/francoisjordaan/Documents/Photos/2016/2016_07_Misc/</div>
+					</div>
+				</div>
+				<div class="slide">
+					<div class="image" style="background-image: url('img/DSC06341.JPG')"></div>
+					<div class="caption">
+						<h2>DSC06341.JPG</h2>
+						<div class="path">/Users/francoisjordaan/Documents/Photos/2016/2016_07_Misc/</div>
+					</div>
+				</div>
+				<div class="slide">
+					<div class="image" style="background-image: url('img/DSC06342.JPG')"></div>
+					<div class="caption">
+						<h2>DSC06342.JPG</h2>
+						<div class="path">/Users/francoisjordaan/Documents/Photos/2016/2016_07_Misc/</div>
+					</div>
+				</div>
+				<div class="slide">
+					<div class="image" style="background-image: url('img/DSC06343.JPG')"></div>
+					<div class="caption">
+						<h2>DSC06343.JPG</h2>
+						<div class="path">/Users/francoisjordaan/Documents/Photos/2016/2016_07_Misc/</div>
+					</div>
+				</div>
+				<div class="slide">
+					<div class="image" style="background-image: url('img/DSC06344.JPG')"></div>
+					<div class="caption">
+						<h2>DSC06344.JPG</h2>
+						<div class="path">/Users/francoisjordaan/Documents/Photos/2016/2016_07_Misc/</div>
+					</div>
+				</div>
+				<div class="slide">
+					<div class="image" style="background-image: url('img/DSC06345.JPG')"></div>
+					<div class="caption">
+						<h2>DSC06345.JPG</h2>
+						<div class="path">/Users/francoisjordaan/Documents/Photos/2016/2016_07_Misc/</div>
+					</div>
+				</div>
+				<div class="slide">
+					<div class="image" style="background-image: url('img/DSC06346.JPG')"></div>
+					<div class="caption">
+						<h2>DSC06346.JPG</h2>
+						<div class="path">/Users/francoisjordaan/Documents/Photos/2016/2016_07_Misc/</div>
+					</div>
+				</div>
+				<div class="slide">
+					<div class="image" style="background-image: url('img/DSC06351.JPG')"></div>
+					<div class="caption">
+						<h2>DSC06351.JPG</h2>
+						<div class="path">/Users/francoisjordaan/Documents/Photos/2016/2016_07_Misc/</div>
+					</div>
+				</div>
+				<div class="slide">
+					<div class="image" style="background-image: url('img/DSC06353.JPG')"></div>
+					<div class="caption">
+						<h2>DSC06353.JPG</h2>
+						<div class="path">/Users/francoisjordaan/Documents/Photos/2016/2016_07_Misc/</div>
+					</div>
+				</div>
+				<div class="slide">
+					<div class="image" style="background-image: url('img/DSC06354.JPG')"></div>
+					<div class="caption">
+						<h2>DSC06354.JPG</h2>
+						<div class="path">/Users/francoisjordaan/Documents/Photos/2016/2016_07_Misc/</div>
+					</div>
 				</div>
 			</div>
 			
