tweaked appearance of buttons; added dates

--- a/html-templates/index.html
+++ b/html-templates/index.html
@@ -78,6 +78,7 @@
 					<div class="caption">
 						<h2>DSC06329.JPG</h2>
 						<div class="path">/Users/francoisjordaan/Documents/Photos/2016/2016_07_Misc/</div>
+						<div class="date">23/07/2016 14:31:05</div>
 						<p>Photo description / caption if in EXIF/IPTC data.</p>
 						<p class="tags"><strong>Tags:</strong> tag1, tag2, tag3</p>
 					</div>
@@ -87,6 +88,7 @@
 					<div class="caption">
 						<h2>DSC06330.JPG</h2>
 						<div class="path">/Users/francoisjordaan/Documents/Photos/2016/2016_07_Misc/</div>
+						<div class="date">23/07/2016 14:31:05</div>
 					</div>
 				</div>
 				<div class="slide">
@@ -94,6 +96,7 @@
 					<div class="caption">
 						<h2>DSC06332.JPG</h2>
 						<div class="path">/Users/francoisjordaan/Documents/Photos/2016/2016_07_Misc/</div>
+						<div class="date">23/07/2016 14:31:05</div>
 					</div>
 				</div>
 				<div class="slide">
@@ -101,6 +104,7 @@
 					<div class="caption">
 						<h2>DSC06333.JPG</h2>
 						<div class="path">/Users/francoisjordaan/Documents/Photos/2016/2016_07_Misc/</div>
+						<div class="date">23/07/2016 14:31:05</div>
 					</div>
 				</div>
 				<div class="slide">
@@ -108,6 +112,7 @@
 					<div class="caption">
 						<h2>DSC06334.JPG</h2>
 						<div class="path">/Users/francoisjordaan/Documents/Photos/2016/2016_07_Misc/</div>
+						<div class="date">23/07/2016 14:31:05</div>
 					</div>
 				</div>
 				<div class="slide">
@@ -115,6 +120,7 @@
 					<div class="caption">
 						<h2>DSC06335.JPG</h2>
 						<div class="path">/Users/francoisjordaan/Documents/Photos/2016/2016_07_Misc/</div>
+						<div class="date">23/07/2016 14:31:05</div>
 					</div>
 				</div>
 				<div class="slide">
@@ -122,6 +128,7 @@
 					<div class="caption">
 						<h2>DSC06336.JPG</h2>
 						<div class="path">/Users/francoisjordaan/Documents/Photos/2016/2016_07_Misc/</div>
+						<div class="date">23/07/2016 14:31:05</div>
 					</div>
 				</div>
 				<div class="slide">
@@ -129,6 +136,7 @@
 					<div class="caption">
 						<h2>DSC06337.JPG</h2>
 						<div class="path">/Users/francoisjordaan/Documents/Photos/2016/2016_07_Misc/</div>
+						<div class="date">23/07/2016 14:31:05</div>
 					</div>
 				</div>
 				<div class="slide">
@@ -136,6 +144,7 @@
 					<div class="caption">
 						<h2>DSC06338.JPG</h2>
 						<div class="path">/Users/francoisjordaan/Documents/Photos/2016/2016_07_Misc/</div>
+						<div class="date">23/07/2016 14:31:05</div>
 					</div>
 				</div>
 				<div class="slide">
@@ -143,6 +152,7 @@
 					<div class="caption">
 						<h2>DSC06340.JPG</h2>
 						<div class="path">/Users/francoisjordaan/Documents/Photos/2016/2016_07_Misc/</div>
+						<div class="date">23/07/2016 14:31:05</div>
 					</div>
 				</div>
 				<div class="slide">
@@ -150,6 +160,7 @@
 					<div class="caption">
 						<h2>DSC06341.JPG</h2>
 						<div class="path">/Users/francoisjordaan/Documents/Photos/2016/2016_07_Misc/</div>
+						<div class="date">23/07/2016 14:31:05</div>
 					</div>
 				</div>
 				<div class="slide">
@@ -157,6 +168,7 @@
 					<div class="caption">
 						<h2>DSC06342.JPG</h2>
 						<div class="path">/Users/francoisjordaan/Documents/Photos/2016/2016_07_Misc/</div>
+						<div class="date">23/07/2016 14:31:05</div>
 					</div>
 				</div>
 				<div class="slide">
@@ -164,6 +176,7 @@
 					<div class="caption">
 						<h2>DSC06343.JPG</h2>
 						<div class="path">/Users/francoisjordaan/Documents/Photos/2016/2016_07_Misc/</div>
+						<div class="date">23/07/2016 14:31:05</div>
 					</div>
 				</div>
 				<div class="slide">
@@ -171,6 +184,7 @@
 					<div class="caption">
 						<h2>DSC06344.JPG</h2>
 						<div class="path">/Users/francoisjordaan/Documents/Photos/2016/2016_07_Misc/</div>
+						<div class="date">23/07/2016 14:31:05</div>
 					</div>
 				</div>
 				<div class="slide">
@@ -178,6 +192,7 @@
 					<div class="caption">
 						<h2>DSC06345.JPG</h2>
 						<div class="path">/Users/francoisjordaan/Documents/Photos/2016/2016_07_Misc/</div>
+						<div class="date">23/07/2016 14:31:05</div>
 					</div>
 				</div>
 				<div class="slide">
@@ -185,6 +200,7 @@
 					<div class="caption">
 						<h2>DSC06346.JPG</h2>
 						<div class="path">/Users/francoisjordaan/Documents/Photos/2016/2016_07_Misc/</div>
+						<div class="date">23/07/2016 14:31:05</div>
 					</div>
 				</div>
 				<div class="slide">
@@ -192,6 +208,7 @@
 					<div class="caption">
 						<h2>DSC06351.JPG</h2>
 						<div class="path">/Users/francoisjordaan/Documents/Photos/2016/2016_07_Misc/</div>
+						<div class="date">23/07/2016 14:31:05</div>
 					</div>
 				</div>
 				<div class="slide">
@@ -199,6 +216,7 @@
 					<div class="caption">
 						<h2>DSC06353.JPG</h2>
 						<div class="path">/Users/francoisjordaan/Documents/Photos/2016/2016_07_Misc/</div>
+						<div class="date">23/07/2016 14:31:05</div>
 					</div>
 				</div>
 				<div class="slide">
@@ -206,6 +224,7 @@
 					<div class="caption">
 						<h2>DSC06354.JPG</h2>
 						<div class="path">/Users/francoisjordaan/Documents/Photos/2016/2016_07_Misc/</div>
+						<div class="date">23/07/2016 14:31:05</div>
 					</div>
 				</div>
 			</div>
